<resources>
    <string name="app_name">Family budget</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Главная</string>
    <string name="operations">Операции</string>
    <string name="analytics">Аналитика</string>
    <string name="settings">Настройки</string>
    <string name="plus">+</string>
    <string name="no_mandatory_expenses">У вас не добавлены обязательные траты</string>
    <string name="income">Доходы</string>
    <string name="expenses">Расходы</string>
    <string name="balance_for_the_period">Баланс за период</string>
    <string name="mandatory_expenses">Обязательные траты за</string>
    <string name="zero">0</string>
    <string name="category">Категория</string>
    <string name="add">Добавить</string>
    <string name="add_payment">Добавьте платеж</string>
    <string name="wallets">Счета</string>
    <string name="not_wallet">У вас пока нет счетов</string>
    <string name="sum">Сумма</string>
    <string name="current_year">Этот год</string>
    <string name="current_month">Этот месяц</string>
    <string name="all_time">Все время</string>
    <string name="add_wallet">Добавить счет</string>
    <string name="name_wallet">Название</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="current_week">Эта неделя</string>
    <string name="not_operations">У вас пока нет трат</string>
    <string name="place">Место</string>
    <string name="date">Дата</string>
    <string-array name="icon_array">
        <item>Банк</item>
        <item>Подписки</item>
        <item>Спорт</item>
        <item>Дом</item>
        <item>Детский сад</item>
        <item>Телефон</item>
        <item>Школа</item>
        <item>Магазин</item>
    </string-array>
</resources>