<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_main">

    <TextView
        style="@style/StyleTitle20Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/space_main_half"
        android:text="@string/add_wallet" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/space_main">

        <TextView
            style="@style/StyleTitle16Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_wallet" />

        <EditText
            android:id="@+id/etNewWalletName"
            style="@style/StyleTitle16Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="amount"
            android:labelFor="@id/etNewWalletName"
            android:background="@null"
            android:gravity="end"
            android:inputType="textPersonName" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btnSaveWallet"
        style="@style/StyleButtonGrayBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_main"
        android:backgroundTint="@color/grayBackground"
        android:text="@string/add"
        android:textColor="@color/black" />

</LinearLayout>